# veter

./: CLAUDE.md  CONTEXT.md  Cargo.toml  Makefile  README.md  install.sh
.cargo/: config.toml
assets/: config.toml
crates/vge-cli/src/: main.rs
crates/vge-cli/tests/: cli_roundtrip.rs
crates/vge-protocol/: Cargo.toml
crates/vge-protocol/src/: apc.rs  command.rs  encode.rs  envelope.rs  frame.rs  lib.rs
doc/: file-transfer-extension.md  portal-extension.md  session-extension.md  session-manager.md  vector-graphics-extension.md
femtovg/: Cargo.toml
femtovg/src/: lib.rs
femtovg/src/path/: cache.rs
prt-cli/: Cargo.toml
prt-cli/src/: main.rs
prt-protocol/: Cargo.toml
prt-protocol/src/: apc.rs  codec.rs  command.rs  encode.rs  envelope.rs  frame.rs  lib.rs
ses-protocol/: Cargo.toml
ses-protocol/src/: apc.rs  codec.rs  envelope.rs  frame.rs  frames.rs  lib.rs
src/: main.rs  pty.rs  renderer.rs
src/vge/: render.rs  state.rs
tools/breakout/: Cargo.toml
tools/breakout/src/: main.rs
tools/spinner/: Cargo.toml
tools/spinner/src/: main.rs
tools/vcat/: Cargo.toml
tools/vcat/src/: main.rs
tools/vdraw/: Cargo.toml
tools/vdraw/src/: background.rs  camera.rs  chrome.rs  doc.rs  drag.rs  history.rs  hit.rs  input.rs  main.rs  render.rs  theme.rs  tools.rs
tools/veterd/: Cargo.toml
tools/veterd/src/: attach.rs  daemon.rs  engines.rs  fdpass.rs  ipc.rs  main.rs  probe.rs  runtime.rs  session.rs
tools/vft-client/: Cargo.toml
tools/vft-client/src/: cancel.rs  lib.rs  probe.rs  progress.rs  stream.rs  tty.rs
tools/vmux/: Cargo.toml
tools/vmux/src/: main.rs
tools/vplay/: Cargo.toml
tools/vplay/src/: image_src.rs  input.rs  main.rs  video.rs  viewport.rs
tools/vrecv/: Cargo.toml
tools/vrecv/src/: main.rs
tools/vsd/: Cargo.toml
tools/vsd/src/: attach.rs  engines.rs  fdpass.rs  ipc.rs  main.rs  probe.rs  runtime.rs  session.rs
tools/vsend/: Cargo.toml
tools/vsend/src/: main.rs
tools/vssh/: Cargo.toml
tools/vssh/src/: args.rs  dist.rs  handoff.rs  install.rs  main.rs  probe.rs  ssh.rs
veter/: Cargo.toml
veter-host/: Cargo.toml
veter-host/src/: lib.rs  line_tracker.rs
veter-host/src/prt/: mod.rs  portal.rs  snapshot.rs  state.rs
veter-host/src/ses/: mod.rs  state.rs
veter-host/src/vft/: mod.rs  path.rs  state.rs  worker.rs
veter-host/src/vge/: mod.rs  snapshot.rs  state.rs
veter-host/src/vss/: mod.rs  state.rs
veter/src/: config.rs  lib.rs  main.rs  pty.rs  renderer.rs  search.rs  ses.rs  vss.rs
veter/src/prt/: mod.rs  portal.rs  render.rs  state.rs
veter/src/vft/: mod.rs  state.rs  worker.rs
veter/src/vge/: mod.rs  render.rs  state.rs
vft-protocol/: Cargo.toml
vft-protocol/src/: apc.rs  codec.rs  command.rs  encode.rs  envelope.rs  frame.rs  lib.rs
vge-cli/: Cargo.toml
vge-cli/src/: main.rs
vge-cli/tests/: cli_roundtrip.rs
vge-protocol/src/: apc.rs  codec.rs  command.rs  encode.rs  envelope.rs  frame.rs  lib.rs  path.rs
vge-render/: Cargo.toml
vge-render/src/: lib.rs  placement.rs  probe.rs  response.rs  tty.rs  upload.rs
vss-protocol/: Cargo.toml
vss-protocol/src/: apc.rs  codec.rs  envelope.rs  frame.rs  frames.rs  lib.rs
vt100/: Cargo.toml
vt100/src/: cell.rs  charset.rs  grid.rs  lib.rs  perform.rs  row.rs  screen.rs  snapshot.rs
vterm/: Cargo.toml
vterm/src/: clipboard.rs  main.rs  pty.rs  renderer.rs
vterm/src/prt/: mod.rs  portal.rs  render.rs  state.rs
vterm/src/vge/: render.rs  state.rs
