[workspace]
members = ["veter", "veter-host", "vge-protocol", "vge-render", "vge-cli", "prt-protocol", "prt-cli", "vft-protocol", "vss-protocol", "ses-protocol", "tools/vcat", "tools/vplay", "tools/breakout", "tools/vmux", "tools/vft-client", "tools/vsend", "tools/vrecv", "tools/veterd", "tools/vssh", "vt100"]
resolver = "2"
