# Vendored fork of femtovg 0.22.0.
#
# Local fork so we can fix a closed-stroke seam artifact (a spurious round
# join emitted at a collinear CORNER point, e.g. the mid-edge seam of a
# rounded rectangle). See src/path/cache.rs (`calculate_joins`). The fix is
# intended to be upstreamed; keep the diff against upstream minimal.
#
# Examples, book, integration tests and their heavy dev-dependencies were
# dropped from the manifest — the regression coverage for our fix lives as an
# inline `#[cfg(test)]` module in src/path/cache.rs and needs no GPU context.
[package]
name = "femtovg"
description = "Antialiased 2D vector drawing library (vendored fork)"
version = "0.22.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = [
    "Peter Todorov <ptodorov@cytec.bg>",
    "Adam Nemecek <adamnemecek@gmail.com>",
]
keywords = ["graphics", "canvas", "vector", "drawing", "gpu"]
categories = ["graphics"]
repository = "https://github.com/femtovg/femtovg"
edition = "2021"
rust-version = "1.88"

[dependencies]
fnv = { version = "1.0.7" }
rgb = "0.8.50"
bytemuck = { version = "1.16", features = ["derive"] }
imgref = "1.11.0"
bitflags = "2.6.0"
rustybuzz = { version = "0.20.0", optional = true }
unicode-bidi = { version = "0.3.17", optional = true }
unicode-segmentation = { version = "1.12.0", optional = true }
slotmap = "1.0.7"
lru = { version = "0.16.0", optional = true, default-features = false }
image = { version = "0.25.0", optional = true, default-features = false }
serde = { version = "1.0", optional = true, features = ["derive", "rc"] }
glow = { version = "0.17.0", default-features = false }
log = "0.4"
wgpu = { version = "28", optional = true, default-features = false, features = ["wgsl"] }
itertools = "0.14"
ttf-parser = { version = "0.25.1", optional = true }
swash = { version = "0.2.6", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = { version = "0.32", optional = true, default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys = { version = "0.3", package = "web-sys", features = [
    "WebGlContextAttributes",
    "HtmlImageElement",
    "WebGl2RenderingContext",
] }
wasm-bindgen = "0.2"

[features]
default = ["image-loading", "textlayout"]
image-loading = ["image"]
debug_inspector = []
wgpu = ["dep:wgpu"]
textlayout = ["dep:rustybuzz", "dep:unicode-bidi", "dep:unicode-segmentation", "dep:lru", "dep:ttf-parser"]
swash = ["dep:swash"]
