[package]
name = "veter"
version = "0.1.0"
edition = "2024"

# Hybrid lib+bin: the lib face exposes the host engine modules
# (vge, prt, vft) and their dependencies so other workspace crates —
# notably `veterd` (`doc/session-manager.md`) — can link against the
# same engine state without re-implementing it. The `[[bin]]` target
# is the GUI veter binary itself.
[lib]
name = "veter"
path = "src/lib.rs"

[[bin]]
name = "veter"
path = "src/main.rs"

[dependencies]
vge-protocol = { path = "../vge-protocol" }
prt-protocol = { path = "../prt-protocol" }
vft-protocol = { path = "../vft-protocol" }
vt100 = { path = "../vt100" }
femtovg = { version = "0.22", features = ["swash"] }
parley = "0.7"
swash = "0.2"
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
libc = "0.2"
rgb = "0.8"
imgref = "1"
image = { version = "0.25", default-features = false, features = ["webp", "png"] }
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
opener = "0.8"
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
