[package]
name = "vge-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line tool to emit VGE protocol envelopes for manual testing."

[dependencies]
vge-protocol = { path = "../vge-protocol" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
nix = { version = "0.29", features = ["term", "poll"] }
image = { version = "0.25", default-features = false, features = ["webp"] }
