[package]
name = "vge-render"
version = "0.1.0"
edition = "2024"
description = "Shared client-side helpers for rendering images to a VGE-aware terminal."

[dependencies]
vge-protocol = { path = "../vge-protocol" }
anyhow = "1"
nix = { version = "0.29", features = ["term", "poll", "signal"] }
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
zenwebp = "0.4"
