[package]
name = "vt100"
version = "0.16.2"
edition = "2021"
rust-version = "1.70"
authors = ["Jesse Luehrs <doy@tozt.net>"]
description = "Library for parsing terminal data — local fork with clear_scrollback added"
license = "MIT"
repository = "https://github.com/doy/vt100-rust"

[dependencies]
itoa = "1.0.15"
unicode-width = "0.2.1"
vte = "0.15.0"

[dev-dependencies]
nix = { version = "0.30.1", features = ["term"] }
quickcheck = "1.0"
rand = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
terminal_size = "0.4.2"
