[package]
name = "vterm"
version = "0.1.0"
edition = "2024"

[dependencies]
vge-protocol = { path = "../vge-protocol" }
vt100 = { path = "../vt100" }
femtovg = { version = "0.22", features = ["swash"] }
parley = "0.7"
swash = "0.2"
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
libc = "0.2"
rgb = "0.8"
imgref = "1"
image = { version = "0.25", default-features = false, features = ["webp"] }
