[package]
name = "vcat"
version = "0.1.0"
edition = "2024"
description = "Display images in a VGE-aware terminal."

[dependencies]
vge-protocol = { path = "../../vge-protocol" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
nix = { version = "0.29", features = ["term", "poll"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
libc = "0.2"
zenwebp = "0.4"
