[package]
name = "vdraw"
version = "0.1.0"
edition = "2024"
description = "Interactive block-diagram editor for VGE-aware terminals."

[dependencies]
vge-render = { path = "../../vge-render" }
vge-protocol = { path = "../../vge-protocol" }
anyhow = "1"
nix = { version = "0.29", features = ["term", "poll", "signal"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }
