[package]
name = "vft-client"
version = "0.1.0"
edition = "2024"
description = "Shared client code for vsend / vrecv: raw-TTY guard, host-side frame stream, probe + cursor-position helpers, progress UI."

[dependencies]
vft-protocol = { path = "../../vft-protocol" }
vge-protocol = { path = "../../vge-protocol" }
anyhow = "1"
nix = { version = "0.29", features = ["term", "poll"] }
libc = "0.2"
