[package]
name = "vmux"
version = "0.1.0"
edition = "2024"
description = "Terminal multiplexer over the PRT/VGE extensions."

[dependencies]
prt-protocol = { path = "../../prt-protocol" }
vge-protocol = { path = "../../vge-protocol" }
ses-protocol = { path = "../../ses-protocol" }
anyhow = "1"
nix = { version = "0.29", features = ["term", "poll", "process", "signal", "fs"] }
libc = "0.2"
