[package]
name = "vplay"
version = "0.1.0"
edition = "2024"
description = "Interactive image and video viewer for VGE-aware terminals."

[dependencies]
vge-render = { path = "../../vge-render" }
vge-protocol = { path = "../../vge-protocol" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
nix = { version = "0.29", features = ["term", "poll", "signal"] }
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
zenwebp = "0.4"
serde_json = "1"
