[package]
name = "vsd"
version = "0.1.0"
edition = "2024"
description = "Persistent veter session daemon — holds host vt100 / PRT / VGE state across renderer disconnects (see doc/session-manager.md)."

[dependencies]
veter-host = { path = "../../veter-host" }
vt100 = { path = "../../vt100" }
prt-protocol = { path = "../../prt-protocol" }
vge-protocol = { path = "../../vge-protocol" }
vss-protocol = { path = "../../vss-protocol" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["term", "poll", "process", "signal", "fs", "socket", "uio", "user"] }
libc = "0.2"
