[package]
name = "vssh"
version = "0.1.0"
edition = "2024"
description = "SSH wrapper that keeps veter-tools fresh on remote hosts."

[dependencies]
anyhow = "1"
nix = { version = "0.29", features = ["process"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
